--- a/index.html
+++ b/index.html
@@ -982,7 +982,7 @@ html, body {
     <footer>
         <div class="endpresent">
             <div class="endleft" style="color: white; display: grid; grid-template-columns: repeat(2,1fr);">
-                <h3 ><a href="geo2look@gmail.com"><span class="__cf_email__" data-cfemail="5f383a306d333030341f38323e3633713c3032">[email&#160;protected]</span></a></h3>
+                <h3 ><a href="geo2look@gmail.com"><span class="__cf_email__" data-cfemail="5f383a306d333030341f38323e3633713c3032">geo2loo@gmail.com</span></a></h3>
                 <p style="color: gold; margin-top: 3rem; margin-left: 5rem;">&copy; 2026 Raphael EWANE. Tous droits réservés.</p>
             </div>
             <div class="endright" style="color: white; font-family:Arial, Helvetica, sans-serif; margin-top: 1rem;  display: grid; grid-template-columns: repeat(2,1fr);margin-left: 20rem;">
