--- a/index.html
+++ b/index.html
@@ -989,9 +989,9 @@ html, body {
                 <h4>call</h4>
 
                
-                <h4>whatsapp</h4>
-                <h4>Linkedin</h4>
-                <h4>Github</h4>
+                <h4><a href="https://wa.me/+237659109128">whatsapp</a></h4>
+                <h4><a href="https://www.linkedin.com/in/raphael-ewane-7b9553275/">Linkedin</a></h4>
+                <h4><a href="https://github.com/Raph622/ ">Github</a></h4>
                 
             </div>
         </div>
