--- a/index.html
+++ b/index.html
@@ -648,6 +648,10 @@ html, body {
     
     .endright h4 {
         font-size: 1rem;
+        color: white;
+    }
+    'endright h4 a{
+       text-decoration : none; 
     }
 }
 
