--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@ html, body {
         font-size: 1rem;
         color: white;
     }
-    'endright h4 a{
+    .endright h4 a{
        text-decoration : none; 
     }
 }
